# custom_knn_distance

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
custom_knn_distance/: __init__.py  distance.py  evaluation.py  knn_wrapper.py  preprocessing.py  utils.py
datasets/: student.csv
examples/: car_demo_notebook.ipynb  demo_car.py  demo_student.py
tests/: test_distance.py  test_evaluation.py  test_preprocessing.py
